--- a/.github/workflows/submodule_update.yml
+++ b/.github/workflows/submodule_update.yml
@@ -1,16 +1,11 @@
 name: Weekly Submodule Update
 on:
-  schedule:
-    # Runs at 9:00 AM UTC every Monday
+  schedule: # Runs at 9:00 AM UTC every Monday
     - cron: '0 9 * * 1'
   workflow_dispatch: # Allows manual triggering
 jobs:
   update-submodules:
     runs-on: ubuntu-latest
-    outputs:
-      update_branch: ${{ steps.update-submodules.outputs.update_branch }}
-      updates_made: ${{ steps.update-submodules.outputs.updates_made }}
-      update_report: ${{ steps.update-submodules.outputs.update_report }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -30,7 +25,6 @@ jobs:
           git checkout -b $UPDATE_BRANCH
           echo "UPDATE_BRANCH=$UPDATE_BRANCH" >> $GITHUB_ENV
       - name: Update submodules to latest releases
-        id: update-submodules
         run: |
           # Initialize and update all submodules
           git submodule update --init --recursive
@@ -44,11 +38,12 @@ jobs:
           # For each submodule
           git submodule foreach '
             echo "Checking $name for updates..."
+            UPDATE_REPORT="$UPDATE_REPORT## $name\n"
 
             # Save current commit and its description
             CURRENT_COMMIT=$(git rev-parse HEAD)
             CURRENT_DESC=$(git show -s --format="%h - %s" $CURRENT_COMMIT)
-            UPDATE_REPORT="$UPDATE_REPORT## $name\nCurrent version: $CURRENT_DESC\n"
+            UPDATE_REPORT="$UPDATE_REPORT\nCurrent version: $CURRENT_DESC\n"
 
             # Checkout the default branch
             git checkout $(git symbolic-ref refs/remotes/origin/HEAD | sed "s@^refs/remotes/origin/@@" || echo "master")
@@ -70,13 +65,13 @@ jobs:
               # If the current commit is different from the latest tag
               if [ "$CURRENT_COMMIT" != "$NEW_COMMIT" ]; then
                 echo "Updating $name to $LATEST_TAG"
-                UPDATE_REPORT="$UPDATE_REPORT Updated to: $NEW_DESC (tag: $LATEST_TAG)\n"
+                UPDATE_REPORT="$UPDATE_REPORT\nUpdated to: $NEW_DESC (tag: $LATEST_TAG)\n"
                 cd $toplevel
                 git add $name
                 UPDATES_MADE=true
               else
                 echo "$name is already at the latest release"
-                UPDATE_REPORT="$UPDATE_REPORT Already at latest release\n"
+                UPDATE_REPORT="$UPDATE_REPORT\nAlready at latest release\n"
               fi
             else
               echo "No tags found for $name, pulling latest changes"
@@ -84,69 +79,35 @@ jobs:
             UPDATE_REPORT="$UPDATE_REPORT\n"
           '
 
+          # Set the update report as an environment variable
+          echo "UPDATE_REPORT<<EOF" >> $GITHUB_ENV
+          echo -e "$UPDATE_REPORT" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+          # Set the result as an output variable
+          echo "UPDATES_MADE=$UPDATES_MADE" >> $GITHUB_ENV
+
           # Commit changes if updates were made
           if [ "$UPDATES_MADE" = true ]; then
             git commit -m "Weekly submodule update - $(date +%Y-%m-%d)"
             echo "Submodule updates committed to branch"
-
-            # Push the branch to remote
-            git push --set-upstream origin $UPDATE_BRANCH
           else
             echo "All submodules are already up to date."
           fi
-
-          # Set outputs for next jobs
-          echo "update_branch=$UPDATE_BRANCH" >> $GITHUB_OUTPUT
-          echo "updates_made=$UPDATES_MADE" >> $GITHUB_OUTPUT
-
-          # Escape the update report for GitHub Actions output
-          UPDATE_REPORT="${UPDATE_REPORT//'%'/'%25'}"
-          UPDATE_REPORT="${UPDATE_REPORT//$'\n'/'%0A'}"
-          UPDATE_REPORT="${UPDATE_REPORT//$'\r'/'%0D'}"
-          echo "update_report=$UPDATE_REPORT" >> $GITHUB_OUTPUT
-  create-pull-request:
-    needs: [update-submodules]
-    if: needs.update-submodules.outputs.updates_made == 'true'
-    runs-on: ubuntu-latest
-    steps:
+      - name: Push changes and create PR
+        if: env.UPDATES_MADE == 'true'
+        run: |
+          # Push the branch to remote
+          git push --set-upstream origin $UPDATE_BRANCH
       - name: Create Pull Request
-        uses: actions/github-script@v7
+        if: env.UPDATES_MADE == 'true'
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            // Get the update report from the previous job
-            const updateReport = `${{ needs.update-submodules.outputs.update_report }}`;
-
-            try {
-              const pr = await github.rest.pulls.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Weekly Submodule Updates - ' + new Date().toISOString().split('T')[0],
-                head: '${{ needs.update-submodules.outputs.update_branch }}',
-                base: 'master',
-                body: updateReport,
-                maintainer_can_modify: true
-              });
-
-              console.log(`Pull Request created: ${pr.data.html_url}`);
-
-              // Add labels to the PR
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: pr.data.number,
-                labels: ['dependencies', 'automated-pr']
-              });
-            } catch (error) {
-              core.setFailed(`Failed to create pull request: ${error.message}`);
-            }
-  create-issue-on-failure:
-    needs: [update-submodules]
-    if: failure() && needs.update-submodules.outputs.updates_made == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create issue if process fails
-        uses: actions/github-script@v7
+          script: "const pr = await github.rest.pulls.create({\n  owner: context.repo.owner,\n  repo: context.repo.repo,\n  title: 'Weekly Submodule Updates - ' + new Date().toISOString().split('T')[0],\n  head: process.env.UPDATE_BRANCH,\n  base: 'master', \n  body: process.env.UPDATE_REPORT,\n  maintainer_can_modify: true\n});\n\nconsole.log(`Pull Request created: ${pr.data.html_url}`);\n\n// Add labels to the PR\nawait github.rest.issues.addLabels({\n  owner: context.repo.owner,\n  repo: context.repo.repo,\n  issue_number: pr.data.number,\n  labels: ['dependencies', 'automated-pr']\n});\n"
+      - name: Create issue if update fails
+        if: failure()
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -154,5 +115,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: 'Weekly submodule update failed',
-              body: 'The automated weekly submodule update workflow failed. Either the submodule updates could not be applied or the build verification failed. Please check the [workflow run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.'
+              body: 'The automated weekly submodule update workflow failed. Please check the [workflow run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.'
             })
